Resolves: tdf#102357 export correct locale attribution, not just country

So all XMLPropertyHandler derived XMLCharLanguageHdl, XMLCharScriptHdl,
XMLCharCountryHdl and XMLCharRfcLanguageTagHdl are actually called.

Broken since

    commit 21661ebfbec9ea162582bbc7ab46607eb9095f1a
    Date:   Wed Aug 21 19:16:23 2013 -0400

        fdo#60740: Populate auto styles from edit cells without using UNO API.

Change-Id: If0523752a4dea4e18d3d86ca5a2735fbcf39c3e3